--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "migrate": "knex migrate:latest",
-    "test": "cross-env DB_ENV=testing jest __tests__/earthshine.test.js --watchAll --verbose --runInBand",
+    "test": "cross-env DB_ENV=testing jest __tests__/earthshine.test.js --watchAll --verbose --runInBand"
   },
   "jest": {
     "testEnvironment": "node"
