--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "npx nodemon index.js",
     "server": "nodemon index.js",
     "migrate": "knex migrate:latest",
     "test": "cross-env DB_ENV=testing jest __tests__/earthshine.test.js --watchAll --verbose --runInBand"
@@ -34,6 +34,6 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "jest": "^27.0.6",
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.12"
   }
 }
